[gd_scene format=3 uid="uid://vgm4ndete5aa"]

[ext_resource type="Script" path="res://scripts/ui/equipment_panel.gd" id="1_panel"]

[node name="EquipmentPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_panel")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "裝備與背包"
horizontal_alignment = 0

[node name="CloseButton" type="Button" parent="PanelContainer/VBox/Header"]
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="EquipmentSide" type="VBoxContainer" parent="PanelContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBox/HBox/EquipmentSide"]
layout_mode = 2
text = "已裝備"
horizontal_alignment = 0

[node name="EquipmentGrid" type="GridContainer" parent="PanelContainer/VBox/HBox/EquipmentSide"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBox/HBox"]
layout_mode = 2

[node name="StatsSide" type="VBoxContainer" parent="PanelContainer/VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(220, 0)

[node name="Label" type="Label" parent="PanelContainer/VBox/HBox/StatsSide"]
layout_mode = 2
text = "角色總屬性"
horizontal_alignment = 0

[node name="StatsSummary" type="RichTextLabel" parent="PanelContainer/VBox/HBox/StatsSide"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBox/HBox"]
layout_mode = 2

[node name="InventorySide" type="VBoxContainer" parent="PanelContainer/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/VBox/HBox/InventorySide"]
layout_mode = 2
text = "背包"
horizontal_alignment = 0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBox/HBox/InventorySide"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryGrid" type="GridContainer" parent="PanelContainer/VBox/HBox/InventorySide/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 6

[node name="Footer" type="HBoxContainer" parent="PanelContainer/VBox"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="PanelContainer/VBox/Footer"]
layout_mode = 2
size_flags_horizontal = 3
text = "點擊背包裝備 | 點擊已裝備卸下 | 右鍵背包銷毀 | ESC 關閉"
horizontal_alignment = 0


[connection signal="pressed" from="PanelContainer/VBox/Header/CloseButton" to="." method="close"]
